--- a/sft/config.yaml
+++ b/sft/config.yaml
@@ -3,12 +3,12 @@ try_cuda: True
 wandb_project: CQA_RLHF
 model_name: EleutherAI/gpt-neo-1.3B
 data:
-  file_path: file_path
+  file_path: /kaggle/input/python-qa/1.0-data-div-ans-sep.json
   max_length: null
   zero_question: null
 train:
   do_freeze: True
-  checkpoint_dir: checkpoint_dir
+  checkpoint_dir: /kaggle/working/CQA_RLHF/sft/checkpoints
   num_epochs: 3
   learning_rate: 5.e-5
   train_batch_size: 4
@@ -18,7 +18,7 @@ train:
   eval_steps: 500
   save_steps: 1000
   logging_steps: 10
-  wandb_run_name: text
+  wandb_run_name: 1.0-sft-freezed
   ds_config_file: ds_path
 
 
