--- a/sft/config.yaml
+++ b/sft/config.yaml
@@ -1,5 +1,5 @@
 random_seed: 42
-try_cuda: True
+try_cuda: False
 wandb_project: CQA_RLHF
 model_name: EleutherAI/gpt-neo-1.3B
 data:
@@ -11,13 +11,13 @@ train:
   checkpoint_dir: /kaggle/working/checkpoints
   num_epochs: 3
   learning_rate: 5.e-5
-  train_batch_size: 4
-  eval_batch_size: 1
+  train_batch_size: 8
+  eval_batch_size: 4
   gradient_accumulation_steps: 1
   warmup_steps: 100
   eval_steps: 500
   save_steps: 1000
-  logging_steps: 10
+  logging_steps: 50
   wandb_run_name: 1.0-sft-freezed
   ds_config_file: ds_path
 
