--- a/sft/config.yaml
+++ b/sft/config.yaml
@@ -1,26 +1,22 @@
 random_seed: 42
-try_cuda: False
+try_cuda: True
 wandb_project: CQA_RLHF
 model_name: EleutherAI/gpt-neo-1.3B
 data:
-  file_path: /kaggle/input/python-qa/1.0-data-div-ans-sep.json
-  max_length: null
+  file_path: /content/drive/MyDrive/Colab Notebooks/vkr_data/data/1.0-data-div-ans-sep.json
+  max_length: 512
   zero_question: null
 train:
   do_freeze: True
-  checkpoint_dir: /kaggle/working/checkpoints
+  checkpoint_dir: /content/drive/MyDrive/Colab Notebooks/vkr_data/checkpoints
   num_epochs: 3
-  learning_rate: 5.e-5
+  learning_rate: 1.e-5
   train_batch_size: 8
-  eval_batch_size: 4
+  eval_batch_size: 1
   gradient_accumulation_steps: 1
   warmup_steps: 100
   eval_steps: 500
   save_steps: 1000
   logging_steps: 50
   wandb_run_name: 1.0-sft-freezed
-  ds_config_file: ds_path
-
-
-
-
+  ds_config_file: /content/ds-config.json
