Added freezing for some epoches from config

--- a/sft/configs/train_config copy.yaml
+++ b/sft/configs/train_config copy.yaml
@@ -33,6 +33,7 @@ trainer:
     precision: "16"
     strategy: deepspeed_stage_2
     val_check_interval: 500
+    nr_frozen_epochs: 2
 wandb:
   api: text
   args:
