--- a/reward_model/mse_regression/configs/train_config copy.yaml
+++ b/reward_model/mse_regression/configs/train_config copy.yaml
@@ -8,13 +8,13 @@ model_params:
   adam_betas:
     - 0.9
     - 0.95
-  do_compute_bertscore: false
   do_compute_metrics: false
   do_freeze: false
   learning_rate: 2.0e-05
   use_cache: false
   warmup_steps: 100
   weight_decay: 0.001
+  nr_frozen_epochs: 2
 seed: 42
 trainer:
   checkpoint:
