--- a/reward_model/mse_regression/requirements.txt
+++ b/reward_model/mse_regression/requirements.txt
@@ -1,42 +1,42 @@
 aiohttp==3.8.4
 aiosignal==1.3.1
 appdirs==1.4.4
-asttokens
+asttokens==2.2.1
 async-timeout==4.0.2
 attrs==22.2.0
-backcall
-backports.functools-lru-cache
+backcall==0.2.0
+backports.functools-lru-cache==1.6.4
 certifi==2022.12.7
 charset-normalizer==3.1.0
 click==8.1.3
 cmake==3.26.1
 datasets==2.11.0
-debugpy
-decorator
+debugpy==1.6.7
+decorator==5.1.1
 deepspeed==0.8.3
 dill==0.3.6
 docker-pycreds==0.4.0
-executing
+executing==1.2.0
 filelock==3.10.7
 frozenlist==1.3.3
 fsspec==2023.3.0
 gitdb==4.0.10
-GitPython==3.1.31
+gitpython==3.1.31
 hjson==3.1.0
 huggingface-hub==0.13.3
 idna==3.4
-importlib-metadata
+importlib-metadata==6.5.1
 install==1.3.5
-Jinja2==3.1.2
+jinja2==3.1.2
 joblib==1.2.0
 lightning-utilities==0.8.0
 lit==16.0.0
-MarkupSafe==2.1.2
-matplotlib-inline
+markupsafe==2.1.2
+matplotlib-inline==0.1.6
 mpmath==1.3.0
 multidict==6.0.4
 multiprocess==0.70.14
-nest-asyncio
+nest-asyncio==1.5.6
 networkx==3.1
 ninja==1.11.1
 nltk==3.8.1
@@ -52,52 +52,55 @@ nvidia-cusolver-cu11==11.4.0.1
 nvidia-cusparse-cu11==11.7.4.91
 nvidia-nccl-cu11==2.14.3
 nvidia-nvtx-cu11==11.7.91
-packaging
+packaging==23.1
 pandas==2.0.0
-parso
+parso==0.8.3
 pathtools==0.1.2
-pexpect
-pickleshare
-Pillow==9.5.0
-platformdirs
-prompt-toolkit
+pexpect==4.8.0
+pickleshare==0.7.5
+pillow==9.5.0
+pip==23.0.1
+platformdirs==3.2.0
+prompt-toolkit==3.0.38
 protobuf==4.22.1
 psutil==5.9.4
-ptyprocess
-pure-eval
+ptyprocess==0.7.0
+pure-eval==0.2.2
 py-cpuinfo==9.0.0
 pyarrow==11.0.0
 pydantic==1.10.7
-Pygments
-python-dateutil
+pygments==2.15.1
+python-dateutil==2.8.2
 pytorch-lightning==1.9.2
 pytz==2023.3
-PyYAML==6.0
-pyzmq
+pyyaml==6.0
+pyzmq==25.0.2
 regex==2023.3.23
 requests==2.28.2
 responses==0.18.0
 sentry-sdk==1.19.0
 setproctitle==1.3.2
-six
+setuptools==66.0.0
+six==1.16.0
 smmap==5.0.0
-stack-data
+stack-data==0.6.2
 sympy==1.11.1
 tokenizers==0.13.3
 torch==2.0.0
 torchaudio==2.0.1
 torchmetrics==0.11.4
 torchvision==0.15.1
-tornado
+tornado==6.3.1
 tqdm==4.65.0
-traitlets
+traitlets==5.9.0
 transformers==4.27.4
 triton==2.0.0
-typing_extensions
+typing-extensions==4.5.0
 tzdata==2023.3
 urllib3==1.26.15
 wandb==0.14.0
-wcwidth
+wcwidth==0.2.6
+wheel==0.38.4
 xxhash==3.2.0
 yarl==1.8.2
-zipp
+zipp==3.15.0
