--- a/rlhf/requirements.txt
+++ b/rlhf/requirements.txt
@@ -103,7 +103,7 @@ sympy==1.11.1
 tokenizers==0.13.3
 toml==0.10.2
 toolz==0.12.0
-torch==1.13.1
+torch
 torchelastic==0.2.2
 torchtext==0.14.1
 torchvision==0.14.1
