--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 /postclassifier
 /sft/test_results
 /reward_model/mse_regression/test_results
-КМУ.pptx
+/reports
 /mse_regression copy
 artifacts
 test_results
